feat(delete): task
delete task end point added to api.
