# target/generated-sources/src/main/java/uk/gov/hmcts/taskmanager/api/controller/TaskManagementSystemApi.java
@@ -38,7 +38,7 @@ import jakarta.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 
-@jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-06-20T13:06:35.610180400+01:00[Europe/London]")
+@jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-07-07T12:08:13.061066500+01:00[Europe/London]")
 @Validated
 public interface TaskManagementSystemApi {
 
@@ -67,6 +67,26 @@ public interface TaskManagementSystemApi {
 );
 
 
+    @Operation(summary = "Delete the details of a task.", description = "", security = {
+        @SecurityRequirement(name = "BasicAuth")    }, tags={ "Task Management System" })
+    @ApiResponses(value = { 
+        @ApiResponse(responseCode = "200", description = "Successful operation", content = @Content(mediaType = "application/json", schema = @Schema(implementation = SuccessResponse.class))),
+        
+        @ApiResponse(responseCode = "400", description = "Invalid input", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
+        
+        @ApiResponse(responseCode = "403", description = "Unauthorised Access"),
+        
+        @ApiResponse(responseCode = "404", description = "Service Not Found"),
+        
+        @ApiResponse(responseCode = "429", description = "API rate limit exceeded", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))) })
+    @RequestMapping(value = "/task",
+        produces = { "application/json" }, 
+        method = RequestMethod.DELETE)
+    ResponseEntity<SuccessResponse> deleteTask(@Parameter(in = ParameterIn.HEADER, description = "" ,required=true,schema=@Schema()) @RequestHeader(value="transactionId", required=true) String transactionId
+, @Parameter(in = ParameterIn.HEADER, description = "" ,required=true,schema=@Schema()) @RequestHeader(value="taskId", required=true) String taskId
+);
+
+
     @Operation(summary = "Retrieve the details of a task.", description = "", security = {
         @SecurityRequirement(name = "BasicAuth")    }, tags={ "Task Management System" })
     @ApiResponses(value = { 
@@ -83,6 +103,7 @@ public interface TaskManagementSystemApi {
         produces = { "application/json" }, 
         method = RequestMethod.GET)
     ResponseEntity<Task> getTask(@Parameter(in = ParameterIn.HEADER, description = "" ,required=true,schema=@Schema()) @RequestHeader(value="transactionId", required=true) String transactionId
+, @Parameter(in = ParameterIn.HEADER, description = "" ,required=true,schema=@Schema()) @RequestHeader(value="taskId", required=true) String taskId
 );
 
 
